# avm

./: CMakeLists.txt
src/: avm.h  avmfwd.h  externs.h  inst.h  localstack.h  main.cpp  mem.h  memfwd.h  resolver.h  stack.h  stringstore.h  value.h
